<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CookEase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string-array name="tab_array">
        <item>Cookbook Search</item><item>View All Recipes</item><item>Pantry</item>
        <item>Shopping List</item>
        
        
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="done">Done!</string>
    <string name="rd_title">Recipe Display</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="add_food">Add</string>

    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="pantry_color">#20B044</color>
    <color name="cookbook_color">#0000FF</color>
    <color name="shoppinglist_color">#FF3399</color>
    <color name="bg_color">#D6D6D6</color>

    <string name="title_activity_pantry_fragment">PantryFragment</string>
    <string name="title_activity_add_food_dialog">AddFoodDialog</string>
    <string name="delete_food">Delete</string>
    <string name="add_new_food">Add a New Food</string>
    <string name="enter_name">Enter name here</string>
    <string name="ok">Done</string>
    <string name="cancel">Cancel</string>
    
    <string name="recipeDisplayActivity">Recipe Display</string>
    <string name="cookbook_search_hint">Enter keyword here</string>
    <string name="cookbook_findrecipes_button">Find Recipes!</string>
    <string name="cookbook_choosetags_button">Choose Tags</string>
    <string name="cookbook_done_button">Check the ingredients that you\'re done with and check \'Remove from Pantry\' and/or \'Add to Shopping List\' as needed.</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="done_button">Done!</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="instructions_title">Directions</string>
    <string name="action_edit_string">Edit</string>
    <string name="add_new_rcp">Add New Recipe</string>
    <string name="delete_rcp">Delete Recipe</string>
    <string name="add_rcp_hint">Enter Recipe ID</string>
    <string name="sure">Move checked items from Shopping List to Pantry?</string>
    <string name="okay">Okay</string>
    
    <string name="make_rcp_title">Add a New Recipe</string>
    <string name="input_rcp_title">Recipe Name: </string>
    <string name="serving_size_input">Serving Size: </string>
    <string name="input_ingredients_instruction">Time to enter your ingredients! Please enter a quantity, choose a unit, and enter the food name.</string>
    <string name="input_instructions_instruction">Enter the recipe directions, with each step on a new line</string>
    <string name="cooking_time_input">Cooking time: </string>
    <string name="delete_rcp_title">Delete a Recipe</string>
    <string name="add_by_id">Add Recipe by ID</string>
    <string name="rm_rcps">What recipe do you want to remove?</string>
    <string name="rm_rcps_choose">Check off the recipes that you want to remove.</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="buy_button">Add Selected Items to Pantry</string>
    <string name="delete_pantry_food">Are you sure you want to delete this food from your pantry?</string>
    <string name="edit_food">Edit this food</string>
    <string name="enter_new_name">Enter new food name here</string>
    <string name="delete_shopping_food">Delete this food from your shopping list?</string>
    <string name="menu_addtoshopping">Add to Shopping List</string>
    <string name="add_to_shopping">Running low? Add food to shopping list!</string>
    <string name="add_img_txt">Add Picture: </string>
    <string name="desc"/>
    <string name="inputRecipeName">What is your recipe called?</string>
    <string name="help">Help</string>
    <string name="cookbook_viewallrecipes_button">View All Recipes</string>
    <string name="foodNameHere">Ingredient name</string>
    <string-array name="units_array">
        <item >cup</item>
        <item>dollop</item><item>drop</item><item>gallon</item><item>handfull</item><item>ounces</item><item>pinch</item><item>pint</item><item>quart</item><item>shot</item><item>singular</item><item>tablespoon</item><item >teaspoon</item>
        
        
        
        
        
        
        
        
        
        
        
    </string-array>
    <string name="choose_pic_dialog_title">Want to use a picture from your gallery or take a picture?</string>
    <string name="add">Add</string>
    <string name="apply_button">Apply</string>

</resources>
