<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!--     <item
        android:id="@+id/action_add_by_id"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/add_by_id"/> -->
    <item
        android:id="@+id/action_add_rcp"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/add_new_rcp"/>
    <item
        android:id="@+id/action_delete_rcp"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/delete_rcp"/>
    <item
        android:id="@+id/action_help_cookbook"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/help"/>

</menu>
