<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/add_new_recipe"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/make_rcp_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/add_new_recipe"
            android:paddingTop="8sp"
            android:text="@string/input_rcp_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_rcp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/recipeName"
            android:inputType="textCapSentences"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/add_rcpimg_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/input_rcp_title"
            android:text="@string/add_img_txt"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/camera_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/add_rcpimg_txt"
            android:layout_toRightOf="@+id/add_rcpimg_txt"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_action_camera" />

        <ImageView
            android:id="@+id/preview_add_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@id/add_rcpimg_txt"
            android:contentDescription="@string/desc"
            android:paddingTop="12sp"
            android:src="@drawable/default_cookease_icon" />

        <Button
            android:id="@+id/makercp_choosetags_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/preview_add_img"
            android:paddingTop="12sp"
            android:text="@string/cookbook_choosetags_button" />

        <TextView
            android:id="@+id/inputIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/makercp_choosetags_button"
            android:paddingTop="20sp"
            android:text="@string/input_ingredients_instruction" />

        <LinearLayout
            android:id="@+id/newIngredientLine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/inputIngredients"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <Spinner
                android:id="@+id/unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/ingredient_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/foodNameHere"
                android:inputType="textCapSentences" />
            
            <Button
                android:id="@+id/addIngredientButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add" />
        </LinearLayout>

        <ListView 
            android:id="@+id/ingredientlistview" 
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
          	android:layout_below="@id/newIngredientLine" />

        <TextView
            android:id="@+id/input_instInst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ingredientlistview"
            android:paddingTop="12sp"
            android:text="@string/input_instructions_instruction" />

        <EditText
            android:id="@+id/input_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_instInst"
            android:inputType="textMultiLine|textCapSentences" />

        <TextView
            android:id="@+id/servingSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_instructions"
            android:paddingTop="12sp"
            android:text="@string/serving_size_input" />

        <EditText
            android:id="@+id/input_serving_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/servingSize"
            android:inputType="number" />

        <TextView
            android:id="@+id/cookingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_serving_size"
            android:paddingTop="12sp"
            android:text="@string/cooking_time_input" />

        <EditText
            android:id="@+id/cooking_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/cookingTime"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/cooking_time_input"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/makercp_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/makercp_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done_button" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>