<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_by_id" />
    
    <EditText
		        android:id="@+id/input_rcp_id"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:inputType="number"/>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >
    <Button
	        android:id="@+id/cancel_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel_button" />
    <Button
	        android:id="@+id/done_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/done_button" />
</LinearLayout>
</LinearLayout>
