<?xml version="1.0" encoding="utf-8"?>
<!--
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
-->
<!-- android:gravity="center_horizontal" -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/rcp_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1" >
        </ImageView>

        <TextView
            android:id="@+id/rcpTitle_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="40sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/recipe_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/recipe_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />


    <TextView
        android:id="@+id/rcpIngredients_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_title"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/rcpIngredients_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:soundEffectsEnabled="true" />

    <TextView
        android:id="@+id/rcpInstructions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_title"
        android:paddingTop="12sp"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/rcpInstructions_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="25"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:soundEffectsEnabled="true" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/done_button" />

</LinearLayout><!-- </ScrollView> -->
